--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -1,1 +1,17 @@
 {% extends "base.html" %}
+
+{% block body %}
+<div class="jumbotron">
+  <div class="container" style="text-align: center;">
+      <h1>
+         Vancouver Python Community 🐍.
+      </h1>
+      <p>
+        Your gateway to the great Python people in Vancouver.
+      </p>
+      <a href="" class="btn btn-primary btn-lg">
+        Sign up now!
+      </a>
+  </div>
+</div>
+{% endblock %}
