--- a/community/templates/base.html
+++ b/community/templates/base.html
@@ -37,7 +37,12 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{% url 'home' %}">{% trans "Home" %}</a></li>
+                        {% url "home" as home_url %}
+                        <li {% if request.path == home_url %}class="active"{% endif %}>
+                            <a href="{{ home_url }}">
+                                {% trans "Home" %}
+                            </a>
+                        </li>
 
                         {% if request.user.is_authenticated and request.user.is_superuser %}
                             {% url "talks:speaker-list" as speaker_list_url %}
@@ -47,7 +52,7 @@
                                 </a>
                             </li>
                             {% url "talks:talk-list" as talk_list_url %}
-                            <li{% if request.path == talk_list_url %}class="active"{% endif %}>
+                            <li {% if request.path == talk_list_url %}class="active"{% endif %}>
                                 <a href="{{ talk_list_url }}">
                                     {% trans "Talks" %}
                                 </a>
