--- a/community/templates/base.html
+++ b/community/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE|default:"en-gb" }}">
     <head>
-        <title>{% block title %}Vancouver Python Community{% endblock %}</title>
+        <title>{% block title %}{% trans "Vancouver Python Community" %}{% endblock %}</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <meta name="created" content="{% now "jS M Y h:i" %}" />
         <meta name="description" content="{% block description %}{% endblock %}" />
@@ -32,7 +32,9 @@
                         <span class="icon-bar"></span>
 
                     </button>
-                    <a class="navbar-brand" href="/">Vancouver Python Community</a>
+                    <a class="navbar-brand" href="{% url "home" %}">
+                        {% trans "Vancouver Python Community" %}
+                    </a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,6 +53,7 @@
                                     {% trans "Speakers" %}
                                 </a>
                             </li>
+
                             {% url "talks:talk-list" as talk_list_url %}
                             <li {% if request.path == talk_list_url %}class="active"{% endif %}>
                                 <a href="{{ talk_list_url }}">
@@ -58,11 +61,22 @@
                                 </a>
                             </li>
 
+                            {% url "events:event-list" as event_list_url %}
+                            <li {% if request.path == event_list_url %}class="active"{% endif %}>
+                                <a href="{{ event_list_url }}">
+                                    {% trans "Events" %}
+                                </a>
+                            </li>
                         {% endif %}
                     </ul>
                     <ul class="nav navbar-nav pull-right">
 
                         {% if request.user.is_authenticated %}
+                            <li>
+                                <a href="{% url "admin:index" %}">
+                                    {% trans "Admin" %}
+                                </a>
+                            </li>
                             <li>
                                 <a href="{% url "admin:logout" %}">
                                     {% trans "Logout" %}
