Add registration and login

--- a/community/templates/home.html
+++ b/community/templates/home.html
@@ -9,7 +9,7 @@
       <p>
         Your gateway to the great Python people in Vancouver.
       </p>
-      <a href="" class="btn btn-primary btn-lg">
+      <a href="{% url "registration_register" %}" class="btn btn-primary btn-lg">
         Sign up now!
       </a>
   </div>
