--- a/community/templates/base.html
+++ b/community/templates/base.html
@@ -85,13 +85,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="{% url "admin:logout" %}">
+                                <a href="{% url "auth_logout" %}">
                                     {% trans "Logout" %}
                                 </a>
                             </li>
                         {% else %}
                             <li>
-                                <a href="{% url "admin:login" %}">
+                                <a href="{% url "auth_login" %}">
                                     {% trans "Log In" %}
                                 </a>
                             </li>
